# TopicVI

./: MANIFEST.in  QuickStart.ipynb  README.md  pyproject.toml  requirements.txt
topicvi/: __init__.py  metrics.py  ploting.py  preprocess.py  prior.py  run.py  topic.py  utils.py
topicvi/data/: DAVID.tissue_up.json  enrichr.GOBP.json  enrichr.GOCC.json  enrichr.GOMF.json  enrichr.Hallmark.json  enrichr.KEGG.json  meta_programs.xlsx
topicvi/model/: __init__.py  base_component.py  module.py  sinkhorn.py
